GNOME Bugzilla – Bug 782998
Crash under on_object_list_got() provider/biji-memo-provider.c:293
Last modified: 2017-06-12 08:07:46 UTC
This is with git master at commit 5ff688e. Opening bijiben leads to a crash with the below backtrace. It doesn't even map UI, the memo is in the memo list available from the beginning.
+ Trace 237504
Thread 1 (Thread 0x7f68b1a66440 (LWP 18716))
Created attachment 352424 [details] [review] proposed patch Trivial fix, do not dereference NULL.
Review of attachment 352424 [details] [review]: Hi, thanks for your patch. When I tried to apply this to master, I got: "fatal: empty ident name (for <>) not allowed". The, checking your patch, it seems it's missing the headers, like this: From 9d9e82ca2b545e318a7eed68428cb1d8a9b778e5 Mon Sep 17 00:00:00 2001 From: it should be you <your-email@your-domain> Date: Sun, 21 Feb 2016 21:40:58 +0000 Subject: [PATCH] memo-provider: title Please fix that and send me again, I'll be glad to commit it. Thanks.
(In reply to Isaque Galdino from comment #2) > When I tried to apply this to master, I got: "fatal: empty ident name (for > <>) not allowed". That's correct, it's a pure patch, not git-formatted patch. It's applied by: $ patch -p1 <patch.patch
Created attachment 353576 [details] [review] memo-provider: Crash opening memo Application is crashing when trying to open a memo from the memo list. Code is not checking for null when processing start, last modified and created dates. This patch fixes that.
Review of attachment 353576 [details] [review]: Pushed to master.
Review of attachment 352424 [details] [review]: Hey, I have git commit --author=your name to it, so thanks for your work.