memo-provider: Crash opening memo

Application is crashing when trying to open a memo from the memo list.

Code is not checking for null when processing start, last modified and
created dates.

This patch fixes that.

https://bugzilla.gnome.org/show_bug.cgi?id=782998